# pp-ledger

./: .aicodeguide  .clang-tidy  .gitignore  AGENTS.md  BUILD_ISSUES.md  CMakeLists.txt  LICENSE  QUICK_START.md  README.md  SERVER_INTEGRATION.md  init-config.example.json  start-test-network.sh  test-checkpoint-cycles.sh  test-network.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  build-libp2p.yml  build-project.yml  release-node-addon.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/app/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pp-beacon  pp-client  pp-miner
_codeql_build_dir/client/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/consensus/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/interface/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/ledger/: CTestTestfile.cmake  Makefile  (+1 more)
app/: CMakeLists.txt  beacon.cpp  client.cpp  http.cpp  httplib.cc  main.cpp  miner.cpp  relay.cpp  server.cpp
chain/: AccountBuffer.cpp  AccountBuffer.h  BlockApplyHost.h  BlockValidation.cpp  BlockValidation.h  BufferApplyHost.h  CMakeLists.txt  Chain.cpp  Chain.h  ChainTransactionContext.h  ChainTxFees.cpp  ChainTxFees.h  ChainTxIdempotency.cpp  ChainTxIdempotency.h  ChainTxSignatures.cpp  ChainTxSignatures.h  ConfigTxHandler.cpp  ConfigTxHandler.h  DefaultTxHandler.cpp  DefaultTxHandler.h  EndUserTxHandler.cpp  EndUserTxHandler.h  ErrorCodes.h  GenesisRenewalTxHandler.cpp  GenesisRenewalTxHandler.h  GenesisTxHandler.cpp  GenesisTxHandler.h  ITransactionHandler.h  ITxHandler.h  NewUserTxHandler.cpp  NewUserTxHandler.h  RecordHandler.cpp  RecordHandler.h  RenewalTxHandler.cpp  RenewalTxHandler.h  RenewalUtil.h  TransactionContext.h  TxContext.h  TxError.h  TxFees.cpp  (+15 more)
chain/test/: CMakeLists.txt  test_account_buffer.cpp  test_chain.cpp
client/: CMakeLists.txt  Client.cpp  Client.h
consensus/: CMakeLists.txt  EpochManager.cpp  EpochManager.h  IBlockChain.h  Ouroboros.cpp  Ouroboros.h  README.md  SlotLeaderSelection.cpp  SlotLeaderSelection.h  SlotTimer.cpp  SlotTimer.h  Types.hpp
consensus/test/: CMakeLists.txt  test_ouroboros_consensus.cpp  test_ouroboros_epoch.cpp  test_ouroboros_vrf.cpp
docs/: BUILDING_WITH_LIBP2P.md  GITHUB_ACTIONS_SETUP.md  NETWORK_LIBP2P_UPDATE.md  SETUP.md  design-printable-zh.md  design-printable.md  design-zh.html  design-zh.md  design.html  design.md  design.txt  development-budget-plan.md  encrypted-token-extension-zh.html  encrypted-token-extension-zh.md  encrypted-token-extension.md  folder-dependency-graph.md  internet-infrastructure-zh.html  internet-infrastructure.html
http/: CMakeLists.txt  httplib.h
interface/: Block.hpp  BlockChain.hpp  CMakeLists.txt  IBlock.hpp  IBlockChain.hpp
ledger/: Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockDir.cpp  BlockDir.h  BlockFile.cpp  BlockFile.h  BlockStore.hpp  CMakeLists.txt  DirDirStore.cpp  DirDirStore.h  DirStore.cpp  DirStore.h  FileDirStore.cpp  FileDirStore.h  FileStore.cpp  FileStore.h  Ledger.cpp  Ledger.h  TypedTx.cpp  TypedTx.h  Wallet.cpp  Wallet.h
ledger/test/: CMakeLists.txt  test_blockchain.cpp  test_blockdir.cpp  test_blockfile.cpp  test_dirdirstore.cpp  test_dirdirstore_relocation.cpp  test_filedirstore.cpp  test_ledger.cpp  test_wallet.cpp
lib/: BinaryPack.h  CMakeLists.txt  Delegator.hpp  Lib.cpp  Lib.h  Logger.cpp  Logger.h  Module.cpp  Module.h  ResultOrError.h  ResultOrError.hpp  Serialize.hpp  Serializer.cpp  Serializer.h  Service.cpp  Service.h  TcpClient.cpp  Utilities.cpp  Utilities.h
lib/cli/: CMakeLists.txt  cli11.hpp
lib/common/: BinaryPack.hpp  CMakeLists.txt  Crypto.cpp  Crypto.h  Logger.cpp  Logger.h  Meta.cpp  Meta.h  Module.cpp  ResultOrError.hpp  Serialize.hpp  Service.cpp  Service.h  ThreadSafeQueue.hpp  Utilities.cpp  Utilities.h
lib/common/io/: Json.cpp  Json.h
lib/common/test/: CMakeLists.txt  test_logger.cpp  test_meta.cpp  test_utilities.cpp
lib/http/: httplib.h  httplib_core.cc  httplib_ssl.cc  httplib_ws.cc
lib/json/: CMakeLists.txt
lib/test/: CMakeLists.txt  test_archive.cpp  test_logger.cpp  test_module.cpp  test_serializer.cpp  test_utilities.cpp
network/: BulkWriter.cpp  BulkWriter.h  CMakeLists.txt  DhtRunner.cpp  DhtRunner.h  FetchClient.cpp  FetchClient.h  FetchServer.cpp  FetchServer.h  README.md  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Types.hpp  example.cpp
network/dht/: CMakeLists.txt  dht_user.c
network/test/: CMakeLists.txt  test_bulkwriter.cpp  test_fetch.cpp  test_tcp.cpp
node-addon/: AddonUtils.cpp  AddonUtils.h  CMakeLists.txt  ClientWrapper.cpp  ClientWrapper.h  addon.cpp  index.d.ts  index.js  package-lock.json  package.json
node-addon/test/: live-beacon.js  smoke.js
ouroboros/: CMakeLists.txt  EpochManager.cpp  EpochManager.h  IBlock.h  IBlockChain.h  OuroborosConsensus.cpp  OuroborosConsensus.h  README.md  SlotLeaderSelection.cpp  SlotLeaderSelection.h
scripts/: ci-build.sh  package-node-addon.sh
server/: ARCHITECTURE.md  AccountBuffer.cpp  AccountBuffer.h  Agent.cpp  Agent.h  BEACON_ARCHITECTURE.md  Beacon.cpp  Beacon.h  BeaconServer.cpp  BeaconServer.h  BlockChain.cpp  BlockChain.h  BlockDir.cpp  BlockDir.h  BlockFile.cpp  BlockFile.h  CMakeLists.txt  Chain.cpp  Chain.h  IMPLEMENTATION_SUMMARY.md  Ledger.cpp  Ledger.h  MINER_ARCHITECTURE.md  MULTI_NODE_SUPPORT.md  Miner.cpp  Miner.h  MinerServer.cpp  MinerServer.h  QUICK_START.md  Relay.cpp  Relay.h  RelayServer.cpp  RelayServer.h  SERVER.md  SERVER_ARCHITECTURE.md  Server.cpp  Server.h  ServerDemo.cpp  Validator.cpp  Validator.h  (+4 more)
server/test/: CMakeLists.txt  test_account_buffer.cpp  test_agent.cpp  test_blockchain.cpp  test_chain.cpp  test_validator.cpp
test/: CMakeLists.txt  test_blockchain.cpp  test_blockdir.cpp  test_blockfile.cpp  test_fetch.cpp  test_ledger.cpp  test_logger.cpp  test_module.cpp  test_ouroboros_consensus.cpp  test_ouroboros_epoch.cpp  test_ouroboros_vrf.cpp  test_result.cpp  test_wallet.cpp
(+82 files in other folders)
